charts-extractor/bin/tmp/manifests/staging/ingress.extensions/idc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: user-wgcfv
    field.cattle.io/ingressState: '{"aWRjL3N0YWdpbmcvc3RnMTMzNy5pZGNyZWF0b3IuY29tLy9odHRwcw==":"","aWRjcmVhdG9y":"p-7hk2b:idcreator"}'
    field.cattle.io/publicEndpoints: '[{"addresses":["34.68.64.217"],"port":443,"protocol":"HTTPS","serviceName":"staging:idc","ingressName":"staging:idc","hostname":"stg1337.idcreator.com","allNodes":false}]'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/client-max-body-size: 256m
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Accept, Accept-CH, Accept-Charset,
      Accept-Datetime, Accept-Encoding, Accept-Ext, Accept-Features, Accept-Language,
      Accept-Params, Accept-Ranges, Access-Control-Allow-Credentials, Access-Control-Allow-Headers,Access-Control-Allow-Methods,
      Access-Control-Allow-Origin, Access-Control-Expose-Headers,Access-Control-Max-Age,
      Access-Control-Request-Headers, Access-Control-Request-Method,Age, Allow, Alternates,
      Authentication-Info, Authorization, C-Ext, C-Man, C-Opt,C-PEP, C-PEP-Info, CONNECT,
      Cache-Control, Compliance, Connection, Content-Base,Content-Disposition, Content-Encoding,
      Content-ID, Content-Language, Content-Length,Content-Location, Content-MD5,
      Content-Range, Content-Script-Type, Content-Security-Policy,Content-Style-Type,
      Content-Transfer-Encoding, Content-Type, Content-Version,Cookie, Cost, DAV,
      DELETE, DNT, DPR, Date, Default-Style, Delta-Base, Depth,Derived-From, Destination,
      Differential-ID, Digest, ETag, Expect, Expires, Ext,From, GET, GetProfile, HEAD,
      HTTP-date, Host, IM, If, If-Match, If-Modified-Since,If-None-Match, If-Range,
      If-Unmodified-Since, Keep-Alive, Label, Last-Event-ID,Last-Modified, Link, Location,
      Lock-Token, MIME-Version, Man, Max-Forwards,Media-Range, Message-ID, Meter,
      Negotiate, Non-Compliance, OPTION, OPTIONS,OWS, Opt, Optional, Ordering-Type,
      Origin, Overwrite, P3P, PEP, PICS-Label,POST, PUT, Pep-Info, Permanent, Position,
      Pragma, ProfileObject, Protocol, Protocol-Query,Protocol-Request, Proxy-Authenticate,
      Proxy-Authentication-Info, Proxy-Authorization,Proxy-Features, Proxy-Instruction,
      Public, RWS, Range, Referer, Refresh, Resolution-Hint,Resolver-Location, Retry-After,
      Safe, Sec-Websocket-Extensions, Sec-Websocket-Key,Sec-Websocket-Origin, Sec-Websocket-Protocol,
      Sec-Websocket-Version, Security-Scheme,Server, Set-Cookie, Set-Cookie2, SetProfile,
      SoapAction, Status, Status-URI,Strict-Transport-Security, SubOK, Subst, Surrogate-Capability,
      Surrogate-Control,TCN, TE, TRACE, Timeout, Title, Trailer, Transfer-Encoding,
      UA-Color, UA-Media,UA-Pixels, UA-Resolution, UA-Windowpixels, URI, Upgrade,
      User-Agent, Variant-Vary,Vary, Version, Via, Viewport-Width, WWW-Authenticate,
      Want-Digest, Warning,Width, X-Content-Duration, X-Content-Security-Policy, X-Content-Type-Options,X-CustomHeader,
      X-DNSPrefetch-Control, X-Forwarded-For, X-Forwarded-Port, X-Forwarded-Proto,X-Frame-Options,
      X-Modified, X-OTHER, X-PING, X-PINGOTHER, X-Powered-By, X-Requested-With,x-badgemaker-instance
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT,GET,POST,OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  creationTimestamp: "2019-11-26T22:11:17Z"
  generation: 3
  labels:
    cattle.io/creator: norman
  name: idc
  namespace: staging
  resourceVersion: "19289949"
  selfLink: /apis/extensions/v1beta1/namespaces/staging/ingresses/idc
  uid: ab3a088f-1099-11ea-8d66-42010a8000a1
spec:
  rules:
  - host: stg1337.idcreator.com
    http:
      paths:
      - backend:
          serviceName: idc
          servicePort: https
  tls:
  - hosts:
    - stg1337.idcreator.com
    secretName: idcreator
status:
  loadBalancer:
    ingress:
    - ip: 34.68.64.217
